clean up intellij warnings; no functional change